force-app/main/default/objects/Document_Medecin__c/Document_Medecin__c.object-meta.xml
<CustomObject>
    <label>Document Médecin</label>
    <pluralLabel>Documents Médecin</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Document Médecin Number</label>
        <displayFormat>DM-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>