force-app/main/default/objects/Document_Medecin__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Documents Médecin</relationshipLabel>
    <relationshipName>Documents_Medecin</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>