force-app/main/default/objects/Document_Medecin__c/fields/Categorie__c.field-meta.xml
<CustomField>
    <fullName>Categorie__c</fullName>
    <label>Catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CIN</fullName>
            </value>
            <value>
                <fullName>Diplome</fullName>
                <label>Diplôme</label>
            </value>
            <value>
                <fullName>INPE</fullName>
            </value>
            <value>
                <fullName>Ordre_Medecins</fullName>
                <label>Ordre des Médecins</label>
            </value>
            <value>
                <fullName>Assurance_RC</fullName>
                <label>Assurance RC</label>
            </value>
            <value>
                <fullName>RIB</fullName>
            </value>
            <value>
                <fullName>Fiscal</fullName>
            </value>
            <value>
                <fullName>Divers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>